# maku

./: .gitignore  README.md  compatibility.toml  continue.toml  design.md  language.md  mise.toml  package.json  rust-toolchain.toml
.agents/: continue.toml
.claude/: settings.json
.github/workflows/: ci.yml  publish.yml
bench/: README.md  continuity-v1.json  matrix-v1.json
bench/browser/: runner.html
bench/environments/: m4-pro-macos15-chrome150.json
bench/results/: README.md
cards/: coop.dmk  coop.maku  duel.dmk  duel.maku  reimu_vs_mima.dmk  reimu_vs_mima.maku  render-pack-showcase.maku
cards/docs/: language-reference.maku
cards/lib/: player-rig.dmk  player-rig.maku  prelude.maku  touhou.dmk  touhou.maku
cards/translations/: 020_gsrepeat.dmk  020_gsrepeat.maku  040_spread.maku  060_polar.dmk  060_polar.maku  070_dynamic_lasers.dmk  070_dynamic_lasers.maku  080_aimed.maku  110_exploding_stars.maku  130_bowap.dmk  130_bowap.maku  200_cradle.maku  NOTES.md  SCANNED.md  ph_boss2_spell2.dmk  ph_boss2_spell2.maku  player_homing.maku
cards/tutorials/: t01.dmk  t01.maku  t02.dmk  t02.maku  t03.dmk  t03.maku  t04.dmk  t04.maku  t05.dmk  t05.maku  t06.dmk  t06.maku  t07.dmk  t07.maku  t08.dmk  t08.maku
crates/: Cargo.toml
crates/.cargo/: config.toml
crates/bench/: Cargo.toml
crates/bench/src/: alloc.rs  contract.rs  fixture.rs  lib.rs  result.rs  summary.rs  verify.rs
crates/core/: Cargo.toml  LICENSE  README.md
crates/core/examples/: dbg.rs
crates/core/lib/: prelude.maku  touhou.maku
crates/core/src/: edn.rs  fxhash.rs  host.rs  lib.rs  macroquad.rs  session.rs
crates/core/src/interp/: builtins.rs  card.rs  checker.rs  colliders.rs  dyn.rs  engine.rs  lower.rs  mod.rs  motion.rs  profile.rs  rewrite.rs  rulelower.rs  sem.rs  signatures.rs  spawn.rs  specs.rs  types.rs  world.rs
crates/core/src/interp/builtins/: array.rs  language.rs
crates/core/src/model/: atoms.rs  colliders.rs  entity.rs  figure.rs  renderers.rs  symbol.rs
crates/core/src/sim/: mod.rs  render.rs  tests.rs
crates/core/src/touhou/: color.rs  frame.rs  mod.rs  profile.rs  renderer.rs  stock.rs  tests.rs
crates/mesh-touhou/: Cargo.toml  README.md
crates/player/: Cargo.toml  README.md
crates/player/src/: bindings.rs  lib.rs  macroquad_compat.rs  main.rs
crates/render-touhou/: Cargo.toml  README.md
crates/render-touhou/src/: color.rs  frame.rs  profile.rs  tests.rs
crates/web/: Cargo.toml  README.md  build.sh  release-sync.json
crates/web/editor-src/: maku-codemirror.js
crates/web/src/: lib.rs
crates/web/static/: canvas-renderer.js  index.html  main.js  maku-codemirror.js  maku-highlight.js  manifest.js  markdown.js  reader.js  smoke.mjs
dmk-corpus/: README.md
docs/: README.md  design.md  documentation-inventory.md  downstream-sync.md  from-dmk.md  host-api.md  language-reference.md  language.md  performance-baseline-2026-07.md  player.md  public-api.md  releasing.md  renderer-api.md  types.md
docs/benchmarks/: 2026-07-f64-baseline.md  2026-07-progress-update.md  README.md
docs/community/: bullet-hell-engines-2026-07.md
docs/notes/: TODO.md  builtins-audit.md  channel-unification.md  compiled-dyn-design.md  data-model.md  evolve-design.md  evolve-reexpression-design.md  intrinsics.md  live-evolve-design.md  mesh-renderer-spec.md  model-split.md  perf-campaign.md  remat-design.md  render-output-design.md  scan-design.md
docs/release-integrations/: neen-ink-maku-0.1.json
docs/release-notes/: 0.1.0-pre.md  0.2.0.md
openspec/: config.yaml
proto/: Cargo.toml
proto/core/: Cargo.toml
proto/core/examples/: dbg.rs  profile.rs
proto/core/src/: edn.rs  host.rs  interp.rs  lib.rs  session.rs  sim.rs  web.rs
proto/core/src/interp/: builtins.rs  card.rs  checker.rs  coerce.rs  colliders.rs  dyn.rs  engine.rs  figure.rs  lower.rs  mod.rs  model.rs  motion.rs  profile.rs  projectors.rs  provenance.rs  renderers.rs  rewrite.rs  rulelower.rs  schema.rs  sem.rs  signatures.rs  spawn.rs  specs.rs  types.rs  world.rs
proto/core/src/interp/builtins/: array.rs  geometry.rs  language.rs  math.rs
proto/core/src/model/: colliders.rs  figure.rs  mod.rs  renderers.rs
proto/core/src/sim/: channels.rs  collision.rs  exec.rs  kernel.rs  mod.rs  render.rs  slots.rs  tests.rs
scripts/: check-benchmark-smoke.sh  check-benchmarks.mjs  check-browser-benchmark-smoke.sh  check-compatibility.mjs  check-doc-links.mjs  check-docs.sh  check-generated.sh  check-packages.sh  check-release-tag.sh  check-source-tree.sh  check-stdlib-assets.sh  check-web-release.mjs  check.sh  compare-benchmark-instrumentation.sh  publish-release.sh  run-benchmark-matrix.sh  run-browser-benchmark.mjs  run-native-allocation-benchmark.sh  summarize-benchmarks.mjs  sync-neen-maku.mjs  write-benchmark-failure.mjs  write-web-release.mjs
translations/: 020_gsrepeat.edn  040_spread.dmk  040_spread.edn  060_polar.edn  070_dynamic_lasers.edn  080_aimed.dmk  080_aimed.edn  110_exploding_stars.edn  130_bowap.edn  200_cradle.edn  NOTES.md  SCANNED.md  ph_boss2_spell2.dmk  ph_boss2_spell2.edn  player_homing.dmk  player_homing.edn
(+541 files in other folders)
