[package]
name = "maku-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Deterministic scale benchmark contracts and runners for Maku"
publish = false

[features]
allocation-counting = []

[dependencies]
maku = { path = "../core", version = "0.1.0" }
maku-render-touhou = { path = "../render-touhou", version = "0.1.0" }
maku-player = { path = "../player", version = "0.1.0" }
macroquad = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
libc = "0.2"
