[package]
name = "maku-player"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Native Macroquad player and reference host for Maku"
publish = false
readme = "README.md"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]
keywords = ["danmaku", "bullet-hell", "gamedev"]
categories = ["games"]

[dependencies]
maku = { path = "../core", features = ["macroquad"] }
macroquad = "0.4"
