[package]
name = "maku-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WebAssembly host bindings for Maku and its Touhou render pack"
documentation = "https://docs.rs/maku-web"
readme = "README.md"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]
keywords = ["danmaku", "bullet-hell", "wasm", "webassembly"]
categories = ["wasm", "game-engines"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
maku = { version = "0.1.0", path = "../core" }
maku-render-touhou = { version = "0.1.0", path = "../render-touhou" }
wasm-bindgen = "0.2"
js-sys = "0.3"

[package.metadata.docs.rs]
all-features = true
targets = ["wasm32-unknown-unknown"]
